--- a/index.html
+++ b/index.html
@@ -8,95 +8,97 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="./assets/css/style.css">
+
     <title>Day Planner</title>
   </head>
   <body>
 
-    <header class="jumbotron">
-        <h1>Work Day Scheduler</h1>
+    <header class="jumbotron my-auto text-center">
+        <h1 id="header">Work Day Scheduler</h1>
         <p>A simple calander app for scheduling your work day</p>
-        <p id="currentDay"></p>
+        <p id="currentDay">Current Date Will Go Here</p>
     </header>
 
     <div class="container">
       <!-- row 1 -->
       <div class="row">
-        <div class="col-1">
+        <div class="col-1 m-1 my-auto time">
           9AM
         </div>
-        <div class="col-10"></div>
-        <div class="col-1"></div>
+        <div class="col-9 m-1 tasks"></div>
+        <div class="col-1 m-1 btn-primary button">button</div>
       </div>
         <!-- row 2 -->
         <div class="row">
-          <div class="col-1">
+          <div class="col-1 m-1 my-auto  time">
             10AM
           </div>
-          <div class="col-10"></div>
-          <div class="col-1"></div>
+          <div class="col-9 m-1 tasks"></div>
+          <div class="col-1 m-1 btn-primary"></div>
         </div>
 
           <!-- row 3 -->
       <div class="row">
-        <div class="col-1">
+        <div class="col-1 m-1 my-auto  time">
           11AM
         </div>
-        <div class="col-10"></div>
-        <div class="col-1"></div>
+        <div class="col-9 m-1 tasks"></div>
+        <div class="col-1 m-1 btn-primary"></div>
       </div>
 
         <!-- row 4 -->
         <div class="row">
-          <div class="col-1">
+          <div class="col-1 m-1 my-auto time">
             12AM
           </div>
-          <div class="col-10"></div>
-          <div class="col-1"></div>
+          <div class="col-9 m-1 tasks"></div>
+          <div class="col-1 m-1 btn-primary"></div>
         </div>
 
           <!-- row 5 -->
       <div class="row">
-        <div class="col-1">
+        <div class="col-1 m-1 my-auto  time">
           1PM
         </div>
-        <div class="col-10"></div>
-        <div class="col-1"></div>
+        <div class="col-9 m-1 tasks"></div>
+        <div class="col-1 m-1 btn-primary"></div>
       </div>
 
         <!-- row 6 -->
         <div class="row">
-          <div class="col-1">
+          <div class="col-1 m-1 my-auto time">
             2PM
           </div>
-          <div class="col-10"></div>
-          <div class="col-1"></div>
+          <div class="col-9 m-1 tasks"></div>
+          <div class="col-1 m-1 btn-primary"></div>
         </div>
 
           <!-- row 7 -->
       <div class="row">
-        <div class="col-1">
+        <div class="col-1 m-1 my-auto time">
           3PM
         </div>
-        <div class="col-10"></div>
-        <div class="col-1"></div>
+        <div class="col-9 m-1 tasks"></div>
+        <div class="col-1 m-1 btn-primary"></div>
       </div>
 
         <!-- row 8 -->
         <div class="row">
-          <div class="col-1">
+          <div class="col-1 m-1 my-auto time">
             4PM
           </div>
-          <div class="col-10"></div>
-          <div class="col-1"></div>
+          <div class="col-9 m-1 tasks"></div>
+          <div class="col-1 m-1 btn-primary "></div>
         </div>
 
           <!-- row 9 -->
       <div class="row">
-        <div class="col-1">
+        <div class="col-1 m-1 my-auto time">
           5PM
         </div>
-        <div class="col-10"></div>
-        <div class="col-1"></div>
+        <div class="col-9 m-1 tasks"></div>
+        <div class="col-1 m-1 btn-primary"></div>
       </div>
 
 
