--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           class="saveBtn"
           id="10save"
         >
-          Saves
+          Save
         </button>
       </div>
       <div class="row">
