changed functions that change color

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <!-- Timeblocks go here -->
       <div class="row">
         <h1 class="hour">9AM</h1>
-        <input class="time-block future" id="9AM" /><button
+        <input class="time-block" id="9AM" /><button
           class="saveBtn"
           id="9save"
         >
@@ -41,7 +41,7 @@
       </div>
       <div class="row">
         <h1 class="hour">10AM</h1>
-        <input class="time-block future" id="10AM" /><button
+        <input class="time-block" id="10AM" /><button
           class="saveBtn"
           id="10save"
         >
@@ -50,7 +50,7 @@
       </div>
       <div class="row">
         <h1 class="hour">11AM</h1>
-        <input class="time-block future" id="11AM" /><button
+        <input class="time-block" id="11AM" /><button
           class="saveBtn"
           id="11save"
         >
@@ -59,7 +59,7 @@
       </div>
       <div class="row">
         <h1 class="hour">12PM</h1>
-        <input class="time-block future" id="12PM" /><button
+        <input class="time-block" id="12PM" /><button
           class="saveBtn"
           id="12save"
         >
@@ -68,7 +68,7 @@
       </div>
       <div class="row">
         <h1 class="hour">1PM</h1>
-        <input class="time-block future" id="1PM" /><button
+        <input class="time-block" id="1PM" /><button
           class="saveBtn"
           id="1save"
         >
@@ -77,7 +77,7 @@
       </div>
       <div class="row">
         <h1 class="hour">2PM</h1>
-        <input class="time-block future" id="2PM" /><button
+        <input class="time-block" id="2PM" /><button
           class="saveBtn"
           id="2save"
         >
@@ -86,7 +86,7 @@
       </div>
       <div class="row">
         <h1 class="hour">3PM</h1>
-        <input class="time-block future" id="3PM" /><button
+        <input class="time-block" id="3PM" /><button
           class="saveBtn"
           id="3save"
         >
@@ -95,7 +95,7 @@
       </div>
       <div class="row">
         <h1 class="hour">4PM</h1>
-        <input class="time-block future" id="4PM" /><button
+        <input class="time-block" id="4PM" /><button
           class="saveBtn"
           id="4save"
         >
@@ -104,7 +104,7 @@
       </div>
       <div class="row">
         <h1 class="hour">5PM</h1>
-        <input class="time-block future" id="5PM" /><button
+        <input class="time-block" id="5PM" /><button
           class="saveBtn"
           id="5save"
         >
